[gd_scene load_steps=5 format=3 uid="uid://b7lurk17j0a8u"]

[ext_resource type="FontFile" uid="uid://pjujtt4estef" path="res://assets/Lato-Regular.ttf" id="1_1ybik"]
[ext_resource type="Script" path="res://lobby.gd" id="1_wmg3g"]
[ext_resource type="PackedScene" uid="uid://c0v2l6440ew5t" path="res://lobby_player.tscn" id="3_xkomk"]

[sub_resource type="LabelSettings" id="LabelSettings_kfd4q"]
font = ExtResource("1_1ybik")
font_size = 40

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wmg3g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="LobbyName" type="Label" parent="VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "LOBBY"
label_settings = SubResource("LabelSettings_kfd4q")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="LeftPlayer" parent="VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("3_xkomk")]
unique_name_in_owner = true
layout_mode = 2
player_name = "Left"

[node name="RightPlayer" parent="VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("3_xkomk")]
unique_name_in_owner = true
layout_mode = 2
player_name = "Right"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="BackBtn" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "BACK"

[node name="ReadyBtn" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "READY"

[node name="StartBtn" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "START"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/ReadyBtn" to="." method="_on_ready_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/StartBtn" to="." method="_on_start_btn_pressed"]
